<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".budgetAssistant.BudgetAssistantActivity">

    <item
        android:id="@+id/action_new_category"
        android:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false"
        android:title="@string/action_add_category"
        android:icon="@drawable/ic_action_add"/>

    <item
        android:id="@+id/action_new_budget"
        android:showAsAction="never"
        android:title="@string/action_new_budget" />
    <item
        android:id="@+id/action_add_income"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_add_income"/>
    <item
        android:id="@+id/action_summary"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_summary" />
</menu>