<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">


    <TextView android:id="@+id/textview_budget_base_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_budget_base_income"/>

    <TextView android:id="@+id/textview_budget_creation_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_budget_creation_date"/>

    <TextView android:id="@+id/textview_budget_total_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_budget_total_income"/>

    <TextView android:id="@+id/textview_budget_total_savings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_budget_total_savings"/>
</LinearLayout>